# chip8-python

./: .gitignore  README.md  pyproject.toml
chip8/: __main__.py  chip8.py  config.py  emulator.py  keyboard.py  memory.py  processor.py  register.py  screen.py  stack.py
